--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_BOT_API_KEY }}
           message: |
             A new commit has been pushed to the Learn-Linux repository!
-            Repository: https://github.com/cosmicqbit/
+            Repository: https://github.com/cosmicqbit/Learn-Linux
+            Commit Message: ${{ github.event.head_commit.message }}
+            Commit Author: ${{ github.event.head_commit.author.name }}
+            Commit URL: ${{ github.event.head_commit.url }}
