--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_API_KEY }}
+          format: html
+          disable_web_page_preview: true
           message: |
-            A new commit has been pushed to the Learn-Linux repository!
-            Repository: https://github.com/cosmicqbit/Learn-Linux
-            Commit Message: ${{ github.event.head_commit.message }}
-            Commit Author: ${{ github.event.head_commit.author.name }}
-            Commit URL: ${{ github.event.head_commit.url }}
+            🔨 <a href="https://github.com/${{ github.repository }}/compare/${{ github.event.before }}...${{ github.event.after }}">1 new commit</a> to Learn-Linux:main:
+
+            <a href="https://github.com/${{ github.repository }}/commit/${{ github.event.after }}">${{ github.event.after | slice: 0, 7 }}</a>: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}
