--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,15 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch all history for accurate comparison
+
+      - name: Shorten SHA
+        id: shorten_sha
+        run: echo "sha_short=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
       - name: Send Telegram Notification
         uses: appleboy/telegram-action@v0.1.0
         with:
@@ -19,4 +28,4 @@ jobs:
           message: |
             🔨 <a href="https://github.com/${{ github.repository }}/compare/${{ github.event.before }}...${{ github.event.after }}">1 new commit</a> to Learn-Linux:main:
 
-            <a href="https://github.com/${{ github.repository }}/commit/${{ github.event.after }}">${{ github.event.after | slice: 0, 7 }}</a>: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}
+            <a href="https://github.com/${{ github.repository }}/commit/${{ github.event.after }}">${{ steps.shorten_sha.outputs.sha_short }}</a>: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}
